# TexThumbnailProvider

./: CMakeLists.txt  CMakePresets.json  Dll.cpp  README.md  RecipeThumbnailProvider.cpp  RecipeThumbnailProvider.vcxproj  TexThumbnailProvider.cpp  TexThumbnailProvider.sln  TexThumbnailProvider.vcxproj
.github/workflows/: release.yml
src/: Dll.cpp
